@@ -40,4 +40,9 @@ application {
 
 tasks.named('run') {
     standardInput = System.in
+    jvmArgs(
+        '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
+        '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
+        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+    )
 }
